--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/quickstart.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/quickstart.mdx
@@ -14,7 +14,7 @@ title: Quickstart
 ## Why Opik Agent Optimizer?
 
 - **Production-grade workflows** – reuse the same datasets, metrics, and tracing you already have in Opik.
-- **Multiple strategies** – swap between MetaPrompt, Hierarchical Reflective, Evolutionary, GEPA, and more with one API.
+- **Multiple strategies** – swap between MetaPrompt, Hierarchical Reflective Prompt Optimizer (HRPO), Evolutionary, GEPA, and more with one API.
 - **Deep analysis** – every trial is logged to Opik so you can inspect prompts, tool calls, and failure modes.
 
 <Callout>
