--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/dashboard_results.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/dashboard_results.mdx
@@ -29,7 +29,7 @@ After each optimization run, visit the Opik dashboard to understand what changed
     When you expand a trial, you can inspect every dataset item that ran during that trial plus the corresponding trace tree (tool calls, attachments, etc.).
   </Accordion>
   <Accordion title="Failure modes (reflective runs only)">
-    Hierarchical Reflective runs add a panel that clusters similar failures. Expand a cluster to read metric reasons and sample traces.
+    HRPO runs add a panel that clusters similar failures. Expand a cluster to read metric reasons and sample traces.
   </Accordion>
   <Accordion title="Dataset coverage">
     Confirms how many dataset rows were sampled per trial so you can judge statistical significance.
