--- a/apps/opik-documentation/documentation/fern/docs/changelog/2025-10-21.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/changelog/2025-10-21.mdx
@@ -41,7 +41,7 @@ Links to official docs: [Evaluating traces with images](/docs/opik/production/ru
 
 **1. Support Multi-Metric Optimization** - Support for optimizing multiple metrics simultaneously with comprehensive frontend and backend changes. Read [more](/docs/opik/agent_optimization/optimization/define_metrics#compose-metrics)
 
-**2. Hierarchical Reflective Optimizer** - New optimizer with self-reflective capabilities. Read more about it [here](/docs/opik/agent_optimization/algorithms/hierarchical_reflective_optimizer)
+**2. HRPO (Hierarchical Reflective Prompt Optimizer)** - New optimizer with self-reflective capabilities. Read more about it [here](/docs/opik/agent_optimization/algorithms/hierarchical_adaptive_optimizer)
 
 
 ## Enhanced Feedback & Annotation experience
