--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/concepts.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/concepts.mdx
@@ -42,7 +42,7 @@ examples, or tool interactions.
     (e.g., [`MetaPromptOptimizer`](/agent_optimization/algorithms/metaprompt_optimizer),
     [`FewShotBayesianOptimizer`](/agent_optimization/algorithms/fewshot_bayesian_optimizer),
     [`EvolutionaryOptimizer`](/agent_optimization/algorithms/evolutionary_optimizer),
-    [`HierarchicalReflectiveOptimizer`](/agent_optimization/algorithms/hierarchical_reflective_optimizer))
+    [`HRPO`](/agent_optimization/algorithms/hierarchical_adaptive_optimizer))
     employs unique strategies and configurable parameters to address specific optimization goals.
   </Accordion>
   <Accordion title="ChatPrompt">
