[NA] [DOCS] Update dashboard documentation image
- Replace dashboards_page.png with dashboard_example.png
- Update image reference in dashboards.mdx
- Update alt text from "Dashboards page" to "Dashboard"

--- a/apps/opik-documentation/documentation/fern/docs/production/dashboards.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/production/dashboards.mdx
@@ -10,7 +10,7 @@ title: Dashboards
 Dashboards allow you to create customizable views for monitoring your LLM applications. You can track project metrics like token usage, cost, and feedback scores, as well as compare experiment results across different runs.
 
 <Frame>
-  <img src="/img/production/dashboards_page.png" alt="Dashboards page" />
+  <img src="/img/production/dashboard_example.png" alt="Dashboard" />
 </Frame>
 
 <Note>
