--- a/apps/opik-documentation/documentation/fern/docs/changelog/2025-12-18.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/changelog/2025-12-18.mdx
@@ -97,7 +97,7 @@ Added full support for GPT 5.2 models in both the playground and online scoring 
 
 **Harbor Integration**
 
-Added a comprehensive Opik integration for Harbor, a benchmark evaluation framework for autonomous LLM agents. The integration enables real-time observability for agent benchmark evaluations (SWE-bench, LiveCodeBench, Terminal-Bench, etc.).
+Added a comprehensive Opik integration for Harbor, a benchmark evaluation framework for autonomous LLM agents. The integration enables observability for agent benchmark evaluations (SWE-bench, LiveCodeBench, Terminal-Bench, etc.).
 
 👉 [Harbor Integration Documentation](https://www.comet.com/docs/opik/integrations/harbor)
 
