[DOCS] Update Python SDK contributing guide to include unit test requirements.txt

--- a/apps/opik-documentation/documentation/fern/docs/contributing/python-sdk.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/contributing/python-sdk.mdx
@@ -91,6 +91,9 @@ cd sdks/python # Ensure you are in this directory
 # Install test-specific requirements
 pip install -r tests/test_requirements.txt
 
+# Install unit test requirements
+pip install -r tests/unit/test_requirements.txt
+
 # Install pre-commit for linting checks (optional but good practice)
 pip install pre-commit
 
