[OPIK-4439][FE] Update Model Defaults (#4450)
* chore: default OAI model bumped

* Update supported_models.mdx

* Update models_config.yaml

* Update supported_models.mdx

--- a/apps/opik-documentation/documentation/fern/docs/tracing/supported_models.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/tracing/supported_models.mdx
@@ -13,7 +13,7 @@ This page lists all models that Opik supports for automatic cost tracking. Cost 
 
 ## Overview
 
-Opik supports cost tracking for **354 models** across **7 providers**:
+Opik supports cost tracking for **359 models** across **7 providers**:
 
 - **[AWS Bedrock](#aws-bedrock)**: 116 models
 - **[Anthropic](#anthropic)**: 18 models
@@ -21,7 +21,7 @@ Opik supports cost tracking for **354 models** across **7 providers**:
 - **[Google AI](#google-ai)**: 35 models
 - **[Google Vertex AI](#google-vertex-ai)**: 39 models
 - **[Groq](#groq)**: 27 models
-- **[OpenAI](#openai)**: 98 models
+- **[OpenAI](#openai)**: 103 models
 
 <h2 id="aws-bedrock">AWS Bedrock</h2>
 
@@ -355,7 +355,7 @@ Models hosted by Groq • [Learn more](https://groq.com)
 
 Models hosted by OpenAI • [Learn more](https://platform.openai.com)
 
-**98 models supported**
+**103 models supported**
 
 <details>
 <summary>View all OpenAI models</summary>
@@ -432,6 +432,11 @@ Models hosted by OpenAI • [Learn more](https://platform.openai.com)
 - `gpt-5-mini-2025-08-07`
 - `gpt-5-nano`
 - `gpt-5-nano-2025-08-07`
+- `gpt-5.2`
+- `gpt-5.2-2025-12-11`
+- `gpt-5.2-chat-latest`
+- `gpt-5.2-pro`
+- `gpt-5.2-pro-2025-12-11`
 - `gpt-realtime`
 - `gpt-realtime-2025-08-28`
 - `o1`
